--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -75,7 +75,10 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
+  fonts:
+      - family: Ubuntu Condensed
+        fonts:
+          - asset: assets/fonts/UbuntuCondensed-Regular.ttf
   #   - family: Schyler
   #     fonts:
   #       - asset: fonts/Schyler-Regular.ttf
